--- a/core/templates/inc/master.html
+++ b/core/templates/inc/master.html
@@ -10,12 +10,14 @@
 	<meta name="keywords" content="" />
 
 	<link rel="stylesheet" href="/static/css/headercss/animate.css">
-	<link rel="stylesheet" href="/static/css/headercss/icomoon.css">
+{#	<link rel="stylesheet" href="/static/css/headercss/style.css">#}
+    <link rel="stylesheet" href="/static/css/icomoon/style.css">
 	<link rel="stylesheet" href="/static/css/bootstrap.css">
 	<link rel="stylesheet" href="/static/css/headercss/magnific-popup.css">
 	<link rel="stylesheet" href="/static/css/headercss/owl.carousel.min.css">
 	<link rel="stylesheet" href="/static/css/headercss/owl.theme.default.min.css">
 	<link rel="stylesheet" href="/static/css/headercss/style.css">
+
 {#    <link rel="stylesheet" href="/static/css/headercss/newstyle.css">#}
     <link rel="stylesheet" href="/static/css/headercss/jquery.fancybox.min.css">
     <script src="/static/js/headerjs/jquery.min.js"></script>
@@ -95,7 +97,7 @@
                                     <a href="/loan" id="loan">创业贷款申请</a>
                                 </li>
                                 <li><a href="/immigrant" id="immigrant">移民落户咨询</a></li>
-                                <li><a href="/studytour" id="immigrant">游学之旅</a></li>
+                                <li><a href="/studytour" id="studytour">游学之旅</a></li>
                                 <li>
                                     <a href="/information" id="information">行业资讯</a>
                                 </li>
