--- a/core/templates/web/assistedliving.html
+++ b/core/templates/web/assistedliving.html
@@ -56,7 +56,7 @@
                 <div class="col-md-6">
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                         <span class="icon">
-                            <i class="icon-check2"></i>
+                            <i class="icon-checkmark"></i>
                         </span>
                         <div class="feature-copy">
                             <h4 class="zifont">留学一学年以上</h4>
@@ -65,7 +65,7 @@
 
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                         <span class="icon">
-                            <i class="icon-check2"></i>
+                            <i class="icon-checkmark"></i>
                         </span>
                         <div class="feature-copy">
                             <h4 class="zifont">完成学业或进修结束后两年内回国定居工作</h4>
@@ -74,7 +74,7 @@
 
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                         <span class="icon">
-                            <i class="icon-check2"></i>
+                            <i class="icon-checkmark"></i>
                         </span>
                         <div class="feature-copy">
                             <h4 class="zifont">毕业或进修结束后首次入境未超过一年</h4>
@@ -84,7 +84,7 @@
                 <div class="col-md-6">
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                         <span class="icon">
-                            <i class="icon-check2"></i>
+                            <i class="icon-checkmark"></i>
                         </span>
                         <div class="feature-copy">
                             <h4 style="margin-top:-5px;" class="zifont"> * 有免税指标（学习期间内连续在外180天可计为一个免税指标）</h4>
@@ -107,7 +107,7 @@
                     <div class="col-xs-12 text-left">
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-add-to-list"></i>
+                                <i class="icon-checkmark"></i>
                             </span>
                             <div class="feature-copy">
                                 <h4 class="zifont">《留学回国人员证明》</h4>
@@ -116,7 +116,7 @@
 
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-credit-card"></i>
+                                <i class="icon-checkmark"></i>
                             </span>
                             <div class="feature-copy">
                                 <h4 class="zifont">《毕业证书》或《学习证明》</h4>
@@ -125,7 +125,7 @@
 
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-list"></i>
+                                <i class="icon-checkmark"></i>
                             </span>
                             <div class="feature-copy">
                                 <h4 class="zifont">身份证（军官证）、户口本 （卡、页）</h4>
@@ -133,7 +133,7 @@
                         </div>
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-play"></i>
+                                <i class="icon-checkmark"></i>
                             </span>
                             <div class="feature-copy">
                                 <h4 class="zifont">护照（记录学习期间全部出入境记录内容）</h4>
@@ -141,7 +141,7 @@
                         </div>
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-air"></i>
+                                <i class="icon-checkmark"></i>
                             </span>
                             <div class="feature-copy">
                                 <h4 class="zifont">《自用物品申请表》（申报前在主管地海关领取）</h4>
@@ -149,7 +149,7 @@
                         </div>
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-check2"></i>
+                                <i class="icon-checkmark"></i>
                             </span>
                             <div class="feature-copy">
                                 <h4 class="zifont">印件及所需其他材料*</h4>
