--- a/core/templates/web/highschool.html
+++ b/core/templates/web/highschool.html
@@ -75,7 +75,7 @@
             <div class="col-md-6">
                 <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                     <span class="icon">
-                        <i class="icon-check"></i>
+                        <i class="icon-checkmark"></i>
                     </span>
                     <div class="feature-copy">
                         <h5>一.这不是放任，是最好的成全。与其在国内高中变成装填机器，不如给孩子一片广阔天空找寻自我的价值。</h5>
@@ -84,7 +84,7 @@
 
                 <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                     <span class="icon">
-                        <i class="icon-check"></i>
+                        <i class="icon-checkmark"></i>
                     </span>
                     <div class="feature-copy">
                         <h5>二.每个孩子都有过人之处，你想眼看着国内的教育将它束缚遏制，还是让它在自由国度里尽情收获鼓励和赞许？</h5>
@@ -93,7 +93,7 @@
 
                 <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                     <span class="icon">
-                        <i class="icon-check"></i>
+                        <i class="icon-checkmark"></i>
                     </span>
                     <div class="feature-copy">
                         <h5>三. 眼界与思维比成绩更能左右未来，你想看孩子因为分数不拔尖而被否定一切，还是带着满满自信笑对每一个明天？</h5>
@@ -101,7 +101,7 @@
                 </div>
                 <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                     <span class="icon">
-                        <i class="icon-check"></i>
+                        <i class="icon-checkmark"></i>
                     </span>
                     <div class="feature-copy">
                         <h5>四. 既然文凭至上让孩子必须在国内与千万人争二十分之一的优等名额，何不让他赢在起跑线，轻松跨入全球TOP100？</h5>
