--- a/core/templates/web/index.html
+++ b/core/templates/web/index.html
@@ -151,60 +151,76 @@
             </div>
             <div class="container text-center" style="margin-top: 3em;">
                 <div class=" col-md-3">
-                    <div class="ourservice">
-                        <i class="icon-home">
-                        </i>
-                        <p>学历学位认证</p>
-                    </div>
+                    <a href="/certification">
+                        <div class="ourservice">
+                            <i class="icon-home">
+                            </i>
+                            <p>学历学位认证</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="col-md-3">
-                    <div class="ourservice">
-                        <i class="icon-book">
-                        </i>
-                        <p>初高中申请</p>
-                    </div>
+                    <a href="/highschool">
+                        <div class="ourservice">
+                            <i class="icon-book">
+                            </i>
+                            <p>初高中申请</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="col-md-3">
-                    <div class="ourservice">
-                        <i class="icon-rocket">
-                        </i>
-                        <p>本研直通</p>
-                    </div>
+                    <a href="/mxztc">
+                        <div class="ourservice">
+                            <i class="icon-rocket">
+                            </i>
+                            <p>本研直通</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="col-md-3">
+                    <a href="/ksbk">
                     <div class="ourservice">
-                        <i class="icon-flash">
+                        <i class="icon-power">
                         </i>
                         <p>快速本科</p>
                     </div>
+                    </a>
                 </div>
                 <div class="col-md-3">
+                    <a href="/courseguide">
                     <div class="ourservice">
-                        <i class="icon-book2">
+                        <i class="icon-books">
                         </i>
                         <p>学术辅导</p>
                     </div>
+                    </a>
                 </div>
                 <div class="col-md-3">
+                    <a href="/zygh">
                     <div class="ourservice">
                         <i class="icon-briefcase">
                         </i>
                         <p>海归职业规划</p>
                     </div>
+                    </a>
                 </div>
                 <div class="col-md-3">
+                    <a href="/assistedliving">
                     <div class="ourservice">
-                        <i class="icon-credit">
+                        <i class="icon-earth">
                         </i>
-                        <p>创业贷款申请</p>
+                        <p>生活辅助</p>
                     </div>
+                    </a>
                 </div>
                 <div class="col-md-3">
+                    <a href="/immigrant">
                     <div class="ourservice">
                         <i class="icon-credit-card">
                         </i>
                         <p>移民落户咨询</p>
                     </div>
+                    </a>
                 </div>
 
             </div>
