--- a/core/templates/web/ksbk.html
+++ b/core/templates/web/ksbk.html
@@ -32,7 +32,7 @@
             <div class="col-md-6">
                 <div class="feature-left">
                     <span class="icon">
-                        <i class="icon-check"></i>
+                        <i class="icon-checkmark"></i>
                     </span>
                     <div class="feature-copy">
                         <h3>学费低廉价格好，轻松入学没烦恼</h3>
@@ -41,7 +41,7 @@
                 </div>
                 <div class="feature-left">
                     <span class="icon">
-                        <i class="icon-check"></i>
+                        <i class="icon-checkmark"></i>
                     </span>
                     <div class="feature-copy">
                         <h3>体育保送，让您美国圆梦</h3>
@@ -50,7 +50,7 @@
                 </div>
                 <div class="feature-left">
                     <span class="icon">
-                        <i class="icon-check"></i>
+                        <i class="icon-checkmark"></i>
                     </span>
                     <div class="feature-copy">
                         <h3>安那罕市安全校区，学生安心家长放心</h3>
@@ -61,7 +61,7 @@
             <div class="col-md-6">
                 <div class="feature-left">
                     <span class="icon">
-                        <i class="icon-check"></i>
+                        <i class="icon-checkmark"></i>
                     </span>
                     <div class="feature-copy">
                         <h3>跨越语言门坎，进入留学殿堂</h3>
@@ -70,7 +70,7 @@
                 </div>
                 <div class="feature-left">
                     <span class="icon">
-                        <i class="icon-check"></i>
+                        <i class="icon-checkmark"></i>
                     </span>
                     <div class="feature-copy">
                         <h3>随时Online，让学习无所不在</h3>
