--- a/core/templates/web/loan.html
+++ b/core/templates/web/loan.html
@@ -97,7 +97,7 @@
                     <div class="col-xs-12 text-left">
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-add-to-list"></i>
+                                <i class="icon-checkmark"></i>
                             </span>
                             <div class="feature-copy">
                                 <h4 class="zifont">申请人需具有完全民事行为能力</h4>
