--- a/core/templates/web/zygh.html
+++ b/core/templates/web/zygh.html
@@ -64,7 +64,7 @@
                     <div class="col-md-12">
                         <div class="feature-left animate-box text-left" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-check2"></i>
+                                <i class="icon-checkmark"></i>
                             </span>
                             <div class="feature-copy">
                                 <h4>提供北美就业咨询服务</h4>
@@ -73,7 +73,7 @@
 
                         <div class="feature-left animate-box text-left" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-check2"></i>
+                                <i class="icon-checkmark"></i>
                             </span>
                             <div class="feature-copy">
                                 <h4>开放北美猎聘网人才资源数据库，让你的才华与优秀更快获得名企高管的关注</h4>
@@ -82,7 +82,7 @@
 
                         <div class="feature-left animate-box text-left" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-check2"></i>
+                                <i class="icon-checkmark"></i>
                             </span>
                             <div class="feature-copy">
                                 <h4>为想要归国就业的留学生提供职业测评、简历包装、就业与面试指导、岗位推荐等就业初期准备工作</h4>
