--- a/core/templates/web/certification.html
+++ b/core/templates/web/certification.html
@@ -206,7 +206,7 @@
             <div class="col-md-6">
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-check2"></i>
+                                <i class="icon-checkmark"></i>
                             </span>
                             <div class="feature-copy">
                                 <h5>二寸彩色证件照片（蓝色背景）</h5>
@@ -215,7 +215,7 @@
 
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-check2"></i>
+                                <i class="icon-checkmark"></i>
                             </span>
                             <div class="feature-copy">
                                 <h5>需认证的国外源语言（颁发证书院校国家的官方语言）学位证书或高等教育文凭正本原件及复印件</h5>
@@ -224,7 +224,7 @@
 
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-check2"></i>
+                                <i class="icon-checkmark"></i>
                             </span>
                             <div class="feature-copy">
                                 <h5>需认证学位证书或高等教育文凭所学课程完整的正式成绩单原件及复印件</h5>
@@ -234,7 +234,7 @@
                     <div class="col-md-6">
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-check2"></i>
+                                <i class="icon-checkmark"></i>
                             </span>
                             <div class="feature-copy">
                                 <h5>需认证的国外学位证书（高等教育文凭）和成绩单（研究证明信）的中文翻译件原件（须经正规翻译机构（公司）进行翻译，个人翻译无效）</h5>
@@ -243,7 +243,7 @@
 
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-check2"></i>
+                                <i class="icon-checkmark"></i>
                             </span>
                             <div class="feature-copy">
                                 <h5>申请者留学期间所有护照（含所有留学期间的签证记录及出入境记录）原件及复印件</h5>
