--- a/core/templates/web/course-guide.html
+++ b/core/templates/web/course-guide.html
@@ -60,10 +60,12 @@
             </div>
             <!-- left side -->
 			<div class="row" style="margin-top: 2em;">
-				<div class="col-md-6">
+                    <div class="text-center">
+
+                    </div>
 					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
 						<span class="icon">
-							<i class="icon-check"></i>
+							<i class="icon-checkmark"></i>
 						</span>
 						<div class="feature-copy">
 							<h4>提高写作技巧与学术写作能力</h4>
@@ -72,27 +74,109 @@
 
 					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
 						<span class="icon">
-							<i class="icon-check"></i>
+							<i class="icon-checkmark"></i>
 						</span>
 						<div class="feature-copy">
 							<h4>规范写作要求，规则，格式</h4>
 						</div>
 					</div>
 
-
-				</div>
-                <!-- right side -->
-                <div class="col-md-6">
-					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+                    <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
 						<span class="icon">
-							<i class="icon-check"></i>
+							<i class="icon-checkmark"></i>
 						</span>
 						<div class="feature-copy">
 							<h4>提供各专业所需相关资源</h4>
 						</div>
 					</div>
+				</div>
+
+                <div class="col-md-3">
+					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+						<span class="icon">
+							<i class="icon-checkmark"></i>
+						</span>
+						<div class="feature-copy">
+							<h4>网课相关问题答疑</h4>
+						</div>
+					</div>
+
+					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+						<span class="icon">
+							<i class="icon-checkmark"></i>
+						</span>
+						<div class="feature-copy">
+							<h4>在线课业咨询与梳理</h4>
+						</div>
+					</div>
+
+                    <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+						<span class="icon">
+							<i class="icon-checkmark"></i>
+						</span>
+						<div class="feature-copy">
+							<h4>任务辅导与考前应急</h4>
+						</div>
+					</div>
 
 				</div>
+
+                <div class="col-md-3">
+					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+						<span class="icon">
+							<i class="icon-checkmark"></i>
+						</span>
+						<div class="feature-copy">
+							<h4>题目解读分析</h4>
+						</div>
+					</div>
+
+					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+						<span class="icon">
+							<i class="icon-checkmark"></i>
+						</span>
+						<div class="feature-copy">
+							<h4>作品作业的校正与润色</h4>
+						</div>
+					</div>
+
+                    <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+						<span class="icon">
+							<i class="icon-checkmark"></i>
+						</span>
+						<div class="feature-copy">
+							<h4>分组项目的全程跟踪指导</h4>
+						</div>
+					</div>
+				</div>
+
+                <div class="col-md-3">
+					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+						<span class="icon">
+							<i class="icon-checkmark"></i>
+						</span>
+						<div class="feature-copy">
+							<h4>IEP、ESL等语言考试辅导</h4>
+						</div>
+					</div>
+                    <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+						<span class="icon">
+							<i class="icon-checkmark"></i>
+						</span>
+						<div class="feature-copy">
+							<h4>雅思、托福、GMAT、GRE、SAT等常规考试辅导</h4>
+						</div>
+					</div>
+                    <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+						<span class="icon">
+							<i class="icon-checkmark"></i>
+						</span>
+						<div class="feature-copy">
+							<h4>各专业单科考前辅导</h4>
+						</div>
+					</div>
+				</div>
+			</div>
 			</div>
 		</div>
 	</div>
@@ -107,40 +191,7 @@
             <div class="row feature-title text-center" id="wangke">
                 <h3>网课梳理</h3>
             </div>
-			<div class="row" style="margin-top: 2em;">
-				<div class="col-md-6">
-					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-						<span class="icon">
-							<i class="icon-check"></i>
-						</span>
-						<div class="feature-copy">
-							<h4>网课相关问题答疑</h4>
-						</div>
-					</div>
 
-					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-						<span class="icon">
-							<i class="icon-check"></i>
-						</span>
-						<div class="feature-copy">
-							<h4>在线课业咨询与梳理</h4>
-						</div>
-					</div>
-
-
-				</div>
-                <div class="col-md-6">
-					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-						<span class="icon">
-							<i class="icon-check"></i>
-						</span>
-						<div class="feature-copy">
-							<h4>任务辅导与考前应急</h4>
-						</div>
-					</div>
-
-				</div>
-			</div>
         </div>
     </div>
     <div style="background: #efefef; padding-top: 4em;padding-bottom: 3em;">
@@ -149,38 +200,8 @@
                 <h3>作业辅导</h3>
             </div>
             <div class="row" style="margin-top: 2em;">
-				<div class="col-md-6">
-					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-						<span class="icon">
-							<i class="icon-check"></i>
-						</span>
-						<div class="feature-copy">
-							<h4>题目解读分析</h4>
-						</div>
-					</div>
 
-					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-						<span class="icon">
-							<i class="icon-check"></i>
-						</span>
-						<div class="feature-copy">
-							<h4>作品作业的校正与润色</h4>
-						</div>
-					</div>
-
-				</div>
                 <!-- right side -->
-                <div class="col-md-6">
-                    <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-						<span class="icon">
-							<i class="icon-check"></i>
-						</span>
-						<div class="feature-copy">
-							<h4>分组项目的全程跟踪指导</h4>
-						</div>
-					</div>
-
-				</div>
 			</div>
         </div>
     </div>
@@ -193,7 +214,7 @@
 				<div class="col-md-6">
 					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
 						<span class="icon">
-							<i class="icon-check"></i>
+							<i class="icon-checkmark"></i>
 						</span>
 						<div class="feature-copy">
 							<h4>IEP、ESL等语言考试辅导</h4>
@@ -201,26 +222,27 @@
 					</div>
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
 						<span class="icon">
-							<i class="icon-check"></i>
+							<i class="icon-checkmark"></i>
 						</span>
 						<div class="feature-copy">
 							<h4>雅思、托福、GMAT、GRE、SAT等常规考试辅导</h4>
 						</div>
 					</div>
-
-				</div>
-                <!-- right side -->
-                <div class="col-md-6">
-
-					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+                    <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
 						<span class="icon">
-							<i class="icon-check"></i>
+							<i class="icon-checkmark"></i>
 						</span>
 						<div class="feature-copy">
 							<h4>各专业单科考前辅导</h4>
 						</div>
 					</div>
 				</div>
+
+				</div>
+                <!-- right side -->
+                <div class="col-md-6">
+
+
 			</div>
 
 		</div>
