--- a/core/templates/web/immigrant.html
+++ b/core/templates/web/immigrant.html
@@ -44,7 +44,7 @@
                     <div class="col-xs-12 text-left">
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-add-to-list"></i>
+                                <i class="icon-checkmark"></i>
                             </span>
                             <div class="feature-copy">
                                 <h4 class="zifont">年龄21-55岁</h4>
@@ -78,7 +78,7 @@
                         </div>
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-air"></i>
+                                <i class="icon-checkmark"></i>
                             </span>
                             <div class="feature-copy">
                                 <h4 class="zifont">身体健康，无犯罪记录史</h4>
@@ -86,7 +86,7 @@
                         </div>
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-check2"></i>
+                                <i class="icon-checkmark"></i>
                             </span>
                             <div class="feature-copy">
                                 <h4 class="zifont">有一定经济基础优先（最好10万美元资产以上）</h4>
@@ -102,7 +102,7 @@
                     <div class="col-xs-12 text-left">
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-add-to-list"></i>
+                                <i class="icon-checkmark"></i>
                             </span>
                             <div class="feature-copy">
                                 <h4 class="zifont">技术移民相关政策咨询答疑</h4>
@@ -178,7 +178,7 @@
                 <div class="col-md-3 col-sm-3">
                     <div class="feature-center function-summary animate-box" data-animate-effect="fadeIn">
                         <span class="icon">
-                            <i class="icon-star2"></i>
+                            <i class="icon-star-empty"></i>
                         </span>
                         <p>申请人不必有学历、语言、经商要求或工作经验的要求</p>
                     </div>
@@ -186,7 +186,7 @@
                 <div class="col-md-3 col-sm-3">
                     <div class="feature-center function-summary animate-box" data-animate-effect="fadeIn">
                         <span class="icon">
-                            <i class="icon-credit"></i>
+                            <i class="icon-coin-dollar"></i>
                         </span>
                         <p>申请人须有能力投资50万或100万美元（资金来源合法，允许赠与、继承等方式）</p>
                     </div>
