--- a/core/templates/web/mxztc.html
+++ b/core/templates/web/mxztc.html
@@ -53,7 +53,7 @@
 {#        <div class ="col-xs-4 animate-box" data-animate-effect="fadeIn">#}
 {#            <a href="/highschool">#}
 {#                <span class="icon">#}
-{#                    <i class="icon-check"></i>#}
+{#                    <i class="icon-checkmark"></i>#}
 {#                </span>#}
 {#                <p>初高中申请</p>#}
 {#            </a>#}
@@ -219,7 +219,7 @@
 				<div class="col-md-6">
 					<div class="feature-left">
 						<span class="icon">
-							<i class="icon-check"></i>
+							<i class="icon-checkmark"></i>
 						</span>
 						<div class="feature-copy">
 							<h3>本科申请</h3>
@@ -230,7 +230,7 @@
                 <div class="col-md-6">
                     <div class="feature-left">
 						<span class="icon">
-							<i class="icon-check"></i>
+							<i class="icon-checkmark"></i>
 						</span>
 						<div class="feature-copy">
 							<h3>研究生申请</h3>
