--- a/core/templates/web/studytour.html
+++ b/core/templates/web/studytour.html
@@ -4,7 +4,7 @@
 {% block head %}
     <script type="text/javascript">
     $(document).ready(function () {
-        $('#loan').prop('class', 'actived');
+        $('#studytour').prop('class', 'actived');
     });
     </script>
 {% endblock %}
